AAE-46507 Get next task (#5420)
* Add method to retrieve the next available task for authenticated users

* Enhance nextTask method to support claiming candidate tasks

* Refactor nextTask method to use TaskIdentificationStrategy for task retrieval

* tests

* Fixes

* Fixes

* Fixes